@@ -69,8 +69,9 @@
     <Compile Include="PieChartLabels.cs" />
     <Compile Include="PlainParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QRCodes.cs" />
-    <Compile Include="QREncodingTypeParam.cs" />
+    <Compile Include="QR\QRCodes.cs" />
+    <Compile Include="QR\QREncodingTypeParam.cs" />
+    <Compile Include="QR\QROptions.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
